pkg/lang/testdata/ub/config/invalid/state-unknown-meta-key.ub
state: { @backend: local, @lock-timeout: '30s' }
